# AI_Agent_Examples

./: .env.sample  .gitignore  LICENSE  Readme.md  requirements.txt
chat_with_mysql/: README.md  pyproject.toml
chat_with_mysql/src/chat_with_mysql/: app.py  crew.py  main.py
chat_with_mysql/src/chat_with_mysql/config/: agents.yaml  tasks.yaml
chat_with_mysql/src/chat_with_mysql/tools/: mysql_tool.py
confluence_rag_example/: Readme.md  app.py  main.py
confluence_rag_example/services/: confluence.py  embeddings.py  question_answer.py
confluence_rag_example/utils/: text_splitter.py
pdf_rag_example/: Readme.md  app.py  main.py
pdf_rag_example/services/: embeddings.py  pdf.py  question_answer.py
simple_chatbot/: Readme.md  app.py  backend.py
travel_planner_langgraph/: Readme.md  main.py
travel_planner_langgraph/UI/: app.py
travel_planner_langgraph/agents/: assistant_agent.py  final_plan_maker_agent.py  flight_info_agent.py  human_destination_selector_agent.py  itinerary_agent.py  possible_destination_agent.py  weather_checklist_agent.py
travel_planner_langgraph/state/: assistant_graph_state.py  user_info.py
travel_planner_langgraph/tools/: flight_search_tool.py  weatherapi_tool.py
